@startuml ATMSystem

class ATM {
    -id : int
    -location : String
    +performTransaction()
}

class ATMUser {
    -id : int
    -username : String
    -password : String
    -account : BankAccount
    -IBAN : String
    -BAN : String
    -NIF : String
    +authenticate()
    
}

class ATMAdmin {
    -admin_id : int
    -username : String
    -password : String
    +manageATM()
    +monitorTransactions()
}

class BankAccount {
    -account_id : int
    -IBAN : String
    -balance : float
    -holder : ATMUser
    +deposit()
    +withdraw()
    +transfer()
    +initiateTransaction()
    +checkBalance()
    +initiateTransfer(recipientIBAN: String, amount: float)
    +queryTransactionHistory()
    +generateReceipt()
}

class Deposit {
    -transaction_id : int
    -timestamp : String
    -amount : float
    +processDeposit()
    +generateReceipt()
}

class Withdrawal {
    -transaction_id : int
    -timestamp : String
    -amount : float
    +processWithdrawal()
    +generateReceipt()
}

class Payment {
    -transaction_id : int
    -timestamp : String
    -amount : float
    -recipientIBAN : String
    -description : String
    +processPayment()
    +generateReceipt()
}

class Transaction {
    -transaction_id : int
    -timestamp : DateTime
    -amount : float
    -type : TransactionType
    -recipientIBAN : String
    +processTransaction()
    +generateReceipt()
}

class TransactionType {
    -type_id : int
    -name : String
    -status : String
    +execute()
}
class Receipt {
    -receipt_id : int
    -content : String
    -transaction_id : Transaction
    -transaction_type : TransactionType
    -timestamp : String
    -user_id : ATMUser
    -atm_location : ATM
    extends Document
}



Deposit -- Transaction : is a
Withdrawal -- Transaction : is a
Payment -- Transaction : is a
Transaction -- BankAccount : involves
BankAccount -- Transaction : has
BankAccount -- Receipt : has
ATMUser -- Receipt : generates
ATMUser -- BankAccount : has
ATMUser -- Transaction : has
BankAccount -- Transaction : has
Transaction -- TransactionType : has
TransactionType -- ATMUser : requires
Receipt -- Transaction : identifies
Receipt -- Deposit : identifies
Receipt -- Withdrawal : identifies
Receipt -- Payment : identifies
TransactionType -- Transaction : identifies
BankAccount -- ATMUser : belongs
BankAccount -- ATMAdmin : belongs
ATMAdmin -- ATM : manages

Receipt -- Transaction : is optional
@enduml

